# DiceQuestAnalytics

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: __init__.py
app/analytics/: __init__.py  reports.py
app/api/: __init__.py  main.py
app/api/routes/: analytics_routes.py  game_routes.py
app/core/: __init__.py  combat.py  dice.py  event_logger.py  story_engine.py
app/models/: database.py  schemas.py
data/: story.yaml
data/i18n/: en.yaml  hu.yaml
streamlit_app/: Game.py  api_client.py  i18n.py  ui_translations.py
streamlit_app/pages/: 2_Analytics.py  Analytics.py
tests/: test_analytics.py  test_api.py  test_combat.py  test_dice.py  test_story_engine.py  test_streamlit_i18n.py
